# chroma_os_web

./: README.md  chroma_os.iso  force_upload.bat  index.html  upload.bat
source/: Cargo.toml  Dockerfile  README.md  RELEASE_NOTES.md  build_iso.bat  chroma_launcher.sh  entrypoint.sh
source/boot/grub/: grub.cfg
source/src/: lib.rs
source/src/core/: ai_synthesizer.rs  blockchain.rs  hdc.rs  hologram.rs  math_kernel.rs  mod.rs  rns.rs
