[package]
name = "chroma_os"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
memmap2 = "0.5"
libc = "0.2"
rand = "0.8"
rayon = "1.7"
minifb = "0.24"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
lazy_static = "1.4"
userfaultfd = "0.5"
